Work tray build
Adding a work tray page.

--- a/_includes/side-nav.html
+++ b/_includes/side-nav.html
@@ -1,7 +1,7 @@
 <div class="sidenav">
   <ul class="nav flex-column">
     <li class="nav-item mx-auto mt-2">
-      <a class="nav-link" aria-current="page" href="#ß" title="Cases"><i class="bi bi-people"></i></a>
+      <a class="nav-link" aria-current="page" href="/work-tray" title="Cases"><i class="bi bi-people"></i></a>
     </li>
     <li class="nav-item mx-auto mt-2">
       <a class="nav-link position-relative" aria-current="page" href="#" title="New requests received">
