--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="row container-fluid g-0">
-    <div class="col-12">
+    <div class="col">
       <p class="text-end me-4">
         <small>Powered by <a href="#" target="_blank">supplier</a></small><br>
         <small>Version x.x.x</small>
