Updated case view layout

--- a/_includes/side-nav-coordinator.html
+++ b/_includes/side-nav-coordinator.html
@@ -1,30 +1,30 @@
 <div class="sidenav">
-  <ul class="nav flex-column">
-    <li class="nav-item mx-auto mt-2">
-      <a class="nav-link" aria-current="page" href="/work-tray" title="Cases"><i class="bi bi-people"></i></a>
+  <ul class="nav d-inline-flex flex-row">
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" href="/work-tray" title="My children and young people"><i class="bi bi-people"></i></a>
     </li>
-    <li class="nav-item mx-auto mt-2">
+    <li class="nav-item">
       <a class="nav-link position-relative" aria-current="page" href="#" title="New requests received">
         <i class="bi bi-inbox"></i>
-        <span class="position-absolute top-1 start-100 translate-middle badge rounded-pill bg-danger new-requests-badge">
+        <span class="position-absolute top-1 badge rounded-pill bg-danger new-requests-badge">
           9
           <span class="visually-hidden">new requests</span>
         </span>
       </a>
     </li>
-    <li class="nav-item mx-auto mt-2">
+    <li class="nav-item">
       <a class="nav-link" aria-current="page" href="#" title="Start a new request"><i class="bi bi-file-earmark-plus"></i></a>
     </li>
-    <li class="nav-item mx-auto mt-2">
+    <li class="nav-item">
       <a class="nav-link" aria-current="page" href="#" title="Panel meetings"><i class="bi bi-bookmark-star"></i></a>
     </li>
-    <li class="nav-item mx-auto mt-2">
+    <li class="nav-item">
       <a class="nav-link" aria-current="page" href="#" title="Import a plan"><i class="bi bi-file-earmark-arrow-up"></i></a>
     </li>
-    <li class="nav-item mx-auto mt-2">
+    <li class="nav-item">
       <a class="nav-link" aria-current="page" href="#" title="Reports"><i class="bi bi-graph-up"></i></a>
     </li>
-    <li class="nav-item mx-auto mt-2">
+    <li class="nav-item">
       <a class="nav-link" aria-current="page" href="#" title="Admin"><i class="bi bi-gear"></i></a>
     </li>
   </ul>
