--- a/_includes/assessment-progress.html
+++ b/_includes/assessment-progress.html
@@ -4,18 +4,22 @@
       <a class="nav-link" aria-current="page" href="request.html"><i class="bi bi-file-earmark-text"></i></a>
       Stage 1
     </li>
+    <li class="d-flex align-items-center"><i class="bi bi-arrow-right"></i></li>
     <li class="nav-item mx-auto previous-stage">
       <a class="nav-link" aria-current="page" href="assessment-decision.html"><i class="bi bi-bookmark-star"></i></a>
       Stage 2
     </li>
+    <li class="d-flex align-items-center"><i class="bi bi-arrow-right"></i></li>
     <li class="nav-item mx-auto previous-stage">
       <a class="nav-link" aria-current="page" href="assessment.html"><i class="bi bi-chat-left-quote"></i></a>
       Stage 3
     </li>
+    <li class="d-flex align-items-center"><i class="bi bi-arrow-right"></i></li>
     <li class="nav-item mx-auto previous-stage">
       <a class="nav-link" aria-current="page" href="plan-decision.html"><i class="bi bi-bookmark-star"></i></a>
       Stage 4
     </li>
+    <li class="d-flex align-items-center"><i class="bi bi-arrow-right"></i></li>
     <li class="nav-item mx-auto current-stage active-stage">
       <a class="nav-link" aria-current="page" href="plan.html"><i class="bi bi-file-earmark-medical"></i></a>
       Stage 5
