Fix horizontal scroll
Fix horizontal scroll in the mobile view for the case page.

--- a/_includes/case-sidebar.html
+++ b/_includes/case-sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar mb-2">
 
-  <div>
+  <div class="mb-4">
     <div class="mx-auto avatar">
       <img src="/assets/images/placeholder.jpeg" alt="Photo of the child or young person">
     </div>
@@ -26,26 +26,26 @@
     </div>
   </div>
 
-  <div>
+  <div class="mb-4">
     <h6>Family</h6>
     <p class="card-text"><small>Louise Hanson</small></p>
   </div>
 
-  <div>
+  <div class="mb-4">
     <h6>Case Coordinator</h6>
     <p class="card-text"><small>Shane Baker<br>
       <a href="#">sbaker@example.com</a></small>
     </p>
   </div>
 
-  <div>
+  <div class="mb-4">
     <h6>Education Setting</h6>
     <p class="card-text"><small><span class="setting-title">Greenhill School</span><br>
         Aileen Rowse</small>
     </p>
   </div>
 
-  <div>
+  <div class="mb-4">
     <h6>Notes</h6>
     <p class="card-text"><small>
       <a href="#">Add case note</a><br>
@@ -55,7 +55,7 @@
     </p>
   </div>
 
-  <div>
+  <div class="mb-4">
     <h6>Key Dates</h6>
     <div class="d-flex justify-content-between">
       <small>Request:</small>
