--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="/">
         <span class="navbar-text">Product name</span>
         <span class="navbar-text separator">|</span>
-        <span class="navbar-text customer-name">Customer name</span>
+        <span class="navbar-text customer-name" title="Customer name">Customer name</span>
       </a>
       <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,13 +22,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link me-3" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-life-preserver"></i> Help</a>
+            <a class="nav-link me-3" href="/help" tabindex="-1" aria-disabled="true"><i class="bi bi-life-preserver"></i> Help</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-  {% include side-nav-coordinator.html %}
-
 </header>
