Add detail to CMS prototype

--- a/_includes/filter-cases.html
+++ b/_includes/filter-cases.html
@@ -1,144 +1,152 @@
-<h6>Filter</h6>
-<div class="dropdown me-3 mb-2">
-  <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-    Case status <i class="bi bi-caret-down"></i>
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li><h6 class="dropdown-header">Assessment</h6></li>
-    <li><a class="dropdown-item" href="#">New request</a></li>
-    <li><a class="dropdown-item" href="#">Request</a></li>
-    <li><a class="dropdown-item" href="#">Assessment decision</a></li>
-    <li><a class="dropdown-item" href="#">Assessment not agreed</a></li>
-    <li><a class="dropdown-item" href="#">Assessment</a></li>
-    <li><a class="dropdown-item" href="#">Plan decision</a></li>
-    <li><a class="dropdown-item" href="#">Plan not agreed</a></li>
-    <li><a class="dropdown-item" href="#">Draft EHC Plan</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><h6 class="dropdown-header">Review</h6></li>
-    <li><a class="dropdown-item" href="#">Pending review</a></li>
-    <li><a class="dropdown-item" href="#">Arrange review</a></li>
-    <li><a class="dropdown-item" href="#">Contribute views</a></li>
-    <li><a class="dropdown-item" href="#">Meeting</a></li>
-    <li><a class="dropdown-item" href="#">Report</a></li>
-    <li><a class="dropdown-item" href="#">Review decision</a></li>
-    <li><a class="dropdown-item" href="#">Proposed amendment</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><h6 class="dropdown-header">Other</h6></li>
-    <li><a class="dropdown-item" href="#">Proposed amendment w/o review</a></li>
-    <li><a class="dropdown-item" href="#">Proposed ceased</a></li>
-    <li><a class="dropdown-item" href="#">Ceased EHC Plan</a></li>
-    <li><a class="dropdown-item" href="#">Closed outside of process</a></li>
-  </ul>
-</div>
-<div class="dropdown me-3 mb-2">
-  <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-    Case co-ordinator <i class="bi bi-caret-down"></i>
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li><a class="dropdown-item" href="#">Adrian Cole</a></li>
-    <li><a class="dropdown-item" href="#">Blanche Fox</a></li>
-    <li><a class="dropdown-item" href="#">Ralph Williamson</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Unassigned</a></li>
-  </ul>
-</div>
-<div class="dropdown me-3 mb-2">
-  <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-    Setting <i class="bi bi-caret-down"></i>
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li><a class="dropdown-item" href="#">Busy Bees Nursery</a></li>
-    <li><a class="dropdown-item" href="#">Greenhill School</a></li>
-    <li><a class="dropdown-item" href="#">St Mary's Primary School</a></li>
-    <li><a class="dropdown-item" href="#">The Tim Peake School of Technology</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Unattached</a></li>
-  </ul>
-</div>
-<div class="dropdown me-3 mb-2">
-  <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-    Year group <i class="bi bi-caret-down"></i>
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li><a class="dropdown-item" href="#">Nursery</a></li>
-    <li><a class="dropdown-item" href="#">Reception</a></li>
-    <li><a class="dropdown-item" href="#">Year 1</a></li>
-    <li><a class="dropdown-item" href="#">Year 2</a></li>
-    <li><a class="dropdown-item" href="#">Year 3</a></li>
-    <li><a class="dropdown-item" href="#">Year 4</a></li>
-    <li><a class="dropdown-item" href="#">Year 5</a></li>
-    <li><a class="dropdown-item" href="#">Year 6</a></li>
-    <li><a class="dropdown-item" href="#">Year 7</a></li>
-    <li><a class="dropdown-item" href="#">Year 8</a></li>
-    <li><a class="dropdown-item" href="#">Year 9</a></li>
-    <li><a class="dropdown-item" href="#">Year 10</a></li>
-    <li><a class="dropdown-item" href="#">Year 11</a></li>
-    <li><a class="dropdown-item" href="#">Year 12</a></li>
-    <li><a class="dropdown-item" href="#">Year 13</a></li>
-    <li><a class="dropdown-item" href="#">Year 14</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">None recorded</a></li>
-  </ul>
-</div>
-<div class="dropdown me-3 mb-2">
-  <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-    Last updated <i class="bi bi-caret-down"></i>
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    <li>
-      <input type="date" class="form-control" id="lastUpdatedDateInput" placeholder="">
-  </li>
-  </ul>
-</div>
-</div>
-<div class="col-12">
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    Impending deadline
-  </label>
-</div>
-<div class="form-check mb-3">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    Overdue deadline
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    Imported plan
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    Hide closed cases
-  </label>
-</div>
-</div>
-<div class="col-12">
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    Safeguarding
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    EOTAS
-  </label>
-</div>
-<div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    Looked after child
-  </label>
-</div>
-<div class="form-check mb-3">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-  <label class="form-check-label" for="flexCheckDefault">
-    NEET
-  </label>
+<div class="bg-white idx-border p-4">
+  <div class="row">
+    <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
+      <div class="me-3 mb-4">
+        <label for="case-statusDataList" class="form-label">Case status</label>
+        <input class="form-control" list="case-status-datalistOptions" id="case-statusDataList" placeholder="All">
+        <datalist id="case-status-datalistOptions">
+          <option value="New request">
+          <option value="Request (information gathering)">
+          <option value="Assessment decision pending">
+          <option value="Declined to assess">
+          <option value="Assessment">
+          <option value="Plan decision pending">
+          <option value="Declined to issue plan">
+          <option value="Draft plan (not yet shared)">
+          <option value="Draft plan (shared)">
+          <option value="Pending review">
+          <option value="Arrange review">
+          <option value="Contribute views">
+          <option value="Review meeting">
+          <option value="Review report">
+          <option value="Review decision pending">
+          <option value="Proposed amendment (not yet shared)">
+          <option value="Proposed amendment (shared)">
+          <option value="Proposed to cease">
+          <option value="Plan ceased">
+          <option value="Proposed amendment w/o review (not yet shared)">
+          <option value="Proposed amendment w/o review (shared)">
+          <option value="Closed outside of process">
+        </datalist>
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
+      <div class="me-3 mb-4">
+        <label for="coordinatorDataList" class="form-label">Case co-ordinator</label>
+        <input class="form-control" list="coordinator-datalistOptions" id="coordinatorDataList" placeholder="All">
+        <datalist id="coordinator-datalistOptions">
+          <option value="Adrian Cole">
+          <option value="Blanche Fox">
+          <option value="Ralph Williamson">
+          <option value="Unassigned">
+        </datalist>
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
+      <div class="me-3 mb-2">
+        <label for="datePicker" class="form-label">Last updated</label>
+        <input type="date" class="form-control" id="datePicker">
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
+      <div class="me-3 mb-4">
+        <label for="year-groupDataList" class="form-label">Year group</label>
+        <input class="form-control" list="year-group-datalistOptions" id="year-groupDataList" placeholder="All">
+        <datalist id="year-group-datalistOptions">
+          <option value="Nusery">
+          <option value="Reception">
+          <option value="Year 1">
+          <option value="Year 2">
+          <option value="Year 3">
+          <option value="Year 4">
+          <option value="Year 5">
+          <option value="Year 6">
+          <option value="Year 7">
+          <option value="Year 8">
+          <option value="Year 9">
+          <option value="Year 10">
+          <option value="Year 11">
+          <option value="Year 12">
+          <option value="Year 13">
+          <option value="Year 14">
+          <option value="None recorded">
+        </datalist>
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-lg-3 col-xl-2">
+      <div class="me-3 mb-4">
+        <label for="settingDataList" class="form-label">Setting</label>
+        <input class="form-control" list="setting-datalistOptions" id="settingDataList" placeholder="All">
+        <datalist id="setting-datalistOptions">
+          <option value="Busy Bees Nursery">
+          <option value="Greenhill School">
+          <option value="St Mary's Primary School">
+          <option value="The Tim Peake School of Technology">
+          <option value="Unattached">
+        </datalist>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6 col-sm-4 col-md-3">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckImpending">
+        <label class="form-check-label" for="flexCheckImpending">
+          Impending deadline
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckOverdue">
+        <label class="form-check-label" for="flexCheckOverdue">
+          Overdue deadline
+        </label>
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-md-3">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckImported">
+        <label class="form-check-label" for="flexCheckImported">
+          Imported plan
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckHide">
+        <label class="form-check-label" for="flexCheckHide">
+          Include closed cases
+        </label>
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-md-3">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckSafeguarding">
+        <label class="form-check-label" for="flexCheckSafeguarding">
+          Safeguarding
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckEOTAS">
+        <label class="form-check-label" for="flexCheckEOTAS">
+          EOTAS
+        </label>
+      </div>
+    </div>
+    <div class="col-6 col-sm-4 col-md-3">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckLAC">
+        <label class="form-check-label" for="flexCheckLAC">
+          Looked after child
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckNeet">
+        <label class="form-check-label" for="flexCheckNeet">
+          NEET
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <a href="#" role="button" class="btn btn-neutral-50 mt-5"><i class="fal fa-sync me-2"></i>Update results</a>
+
 </div>
