--- a/_includes/review-progress.html
+++ b/_includes/review-progress.html
@@ -1,28 +1,33 @@
-<nav class="progress-nav py-2 mb-5">
+<nav class="progress-nav mb-5">
   <ul class="nav d-flex justify-content-between text-center">
     <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-file-alt text-success-500"></i></a>
-      1. Request
+      <a class="nav-link" href="#"><i class="fal fa-calendar-day text-success-500"></i></a>
+      1. Arrange
+    </li>
+    <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
+    <li class="nav-item mx-auto">
+      <a class="nav-link" href="#"><i class="fal fa-comments-alt text-success-500"></i></a>
+      2. Views
+    </li>
+    <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
+    <li class="nav-item mx-auto">
+      <a class="nav-link" href="#"><i class="fal fa-users-class text-success-500"></i></a>
+      3. Meeting
+    </li>
+    <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
+    <li class="nav-item mx-auto">
+      <a class="nav-link" href="#"><i class="fal fa-file-user text-success-500"></i></a>
+      4. Report
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
       <a class="nav-link" href="#"><i class="fal fa-bookmark text-success-500"></i></a>
-      2. Decision
-    </li>
-    <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
-    <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-chalkboard-teacher text-success-500"></i></a>
-      3. Assessment
-    </li>
-    <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
-    <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-bookmark text-success-500"></i></a>
-      4. Decision
+      5. Decision
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
       <a class="nav-link" aria-current="page" href="#"><i class="fal fa-file-contract text-secondary-500"></i></a>
-      5. Plan
+      6. Plan
     </li>
   </ul>
 </nav>
