--- a/_includes/search-users.html
+++ b/_includes/search-users.html
@@ -1,15 +1,15 @@
 <form class="row mt-7 mb-7">
   <div class="col-md-8">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search by name or reference" aria-label="search" aria-describedby="button-addon2">
+      <input type="text" class="form-control" placeholder="Search by name or email" aria-label="search" aria-describedby="button-addon2">
       <button class="btn btn-primary" type="button" id="button-addon2"><i class="fal fa-search me-2 text-white" aria-hidden="true" title="Search"></i>Search</button>
     </div>
   </div>
   <div class="col-md-4">
     <a class="btn btn-neutral-50" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="fal fa-filter me-2"></i>Filters</a>
-    <a class="btn btn-neutral-50" href="#"><i class="fal fa-undo me-2"></i>Clear</a>
+    <a class="btn btn-neutral-50" href="#"><i class="fal fa-user-plus fa-sm me-2"></i>Add user</a>
   </div>
   <div class="collapse p-3" id="search-filters">
-    {% include filter-cases.html %}
+    {% include filter-users.html %}
   </div>
 </form>
