--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,23 @@
 
 		{% include head.html %}
 
-		<body>
+		<body class="min-vh-100 d-flex flex-column">
+
+			<div class="visually-hidden-focusable overflow-hidden">
+        <div class="container-xl">
+            <a class="d-inline-flex p-2 m-1" href="#content">Skip to main content</a>
+            <a class="d-none d-md-inline-flex p-2 m-1" href="#idx-sidenav">Skip to navigation</a>
+        </div>
+    	</div>
+
+			{% include banner-alert.html %}
 
 			{% include header.html %}
 
 			{{ content }}
 
-			{% include footer.html %}
-
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+			<script src="https://kit.fontawesome.com/ac849a8797.js" crossorigin="anonymous"></script>
 
 		</body>
 	</html>
