Add top margin to actions buttons

--- a/_includes/search-users.html
+++ b/_includes/search-users.html
@@ -5,7 +5,7 @@
       <button class="btn btn-primary" type="button" id="button-addon2"><i class="fal fa-search me-2 text-white" aria-hidden="true" title="Search"></i>Search</button>
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 mt-2 mt-lg-0">
     <a class="btn btn-neutral-50" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="fal fa-filter me-2"></i>Filters</a>
     <a class="btn btn-neutral-50" href="#"><i class="fal fa-user-plus fa-sm me-2"></i>Add user</a>
   </div>
