Added colour to plan sections

--- a/_includes/assessment-progress.html
+++ b/_includes/assessment-progress.html
@@ -1,4 +1,4 @@
-<nav class="progress-nav py-2 mb-5">
+<nav class="progress-nav py-2 mb-5 d-none d-md-block">
   <ul class="nav d-flex justify-content-between text-center">
     <li class="nav-item mx-auto">
       <a class="nav-link" href="#"><i class="fal fa-file-alt text-success-500"></i></a>
