Fix help link in the mobile view

--- a/_includes/actions-plan.html
+++ b/_includes/actions-plan.html
@@ -1,6 +1,6 @@
 <div class="row mb-6">
-  <div class="col-lg-6 d-flex align-items-center text-neutral-500">
-    Draft version 1 (shared 29 Dec 2022)
+  <div class="col-lg-6 d-flex align-items-center">
+    Draft version 1 <i class="fal fa-caret-down mx-2"></i> Shared 29 Dec 2022
   </div>
   <div class="col-lg-6 d-flex justify-content-lg-end mt-2 mt-lg-0">
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-pencil-alt me-2"></i>Edit plan</a>
