Icon and mobile view fixes

--- a/_includes/sidenav-case.html
+++ b/_includes/sidenav-case.html
@@ -4,7 +4,7 @@
         <div class="idx-case-sidebar mb-0 pt-1 pb-5 px-1" id="idx-menu">
 
           <div class="d-flex justify-content-between align-items-start my-3 px-2">
-            <h5 class="mb-0">Ellery Holden</h5>
+            <h1 class="mb-0 fs-2 no-border">Ellery Holden</h1>
             <a href="#" title="Edit details">
               <span class="fa-stack text-neutral-500">
                 <i class="fal fa-ellipsis-h fa-stack-1x"></i>
@@ -17,27 +17,23 @@
             <img src="/assets/images/boy running.jpg" class="rounded d-block idx-avatar-card" alt="avatar">
           </div>
 
-          <div class="table-responsive my-3 px-2" id="table-case-sidebar">
-            <table class="table table-sm table-borderless my-0" role="presentation">
-              <tbody>
-                <tr>
-                  <td class="align-top idx-sidebar-accordion-text text-neutral-500" title="Date of birth">DoB</td>
-                  <td class="align-top idx-sidebar-accordion-text ">23 Jun 2016</td>
-                </tr>
-                <tr>
-                  <td class="align-top idx-sidebar-accordion-text text-neutral-500" title="National curriculum year">NCY</td>
-                  <td class="align-top idx-sidebar-accordion-text ">Year 4</td>
-                </tr>
-                <tr>
-                  <td class="align-top idx-sidebar-accordion-text text-neutral-500" title="Case reference">Ref</td>
-                  <td class="align-top idx-sidebar-accordion-text ">EHC/21/0183</td>
-                </tr>
-                <tr>
-                  <td class="align-top idx-sidebar-accordion-text text-neutral-500" title="Case status">Status</td>
-                  <td class="align-top idx-sidebar-accordion-text ">Draft EHC Plan</td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="my-3 px-2">
+            <div class="d-flex justify-content-between">
+              <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="">Date of birth</p>
+              <p class="idx-sidebar-accordion-text mb-1">23 Jun 2016</p>
+            </div>
+            <div class="d-flex justify-content-between">
+              <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="National curriculum year">Year group</p>
+              <p class="idx-sidebar-accordion-text mb-1">Year 4</p>
+            </div>
+            <div class="d-flex justify-content-between">
+              <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Case reference">Reference</p>
+              <p class="idx-sidebar-accordion-text mb-1">EHC/21/0183</p>
+            </div>
+            <div class="d-flex justify-content-between">
+              <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Case status">Status</p>
+              <p class="idx-sidebar-accordion-text mb-1">Draft EHC Plan</p>
+            </div>
           </div>
 
           <div id="subject-tags">
@@ -137,28 +133,22 @@
                 </button>
               </h2>
               <div id="accordion-case-sidebar-collapseFive" class="accordion-collapse collapse" aria-labelledby="accordion-case-sidebar-headingFive">
-                <div class="accordion-body idx-sidebar-accordion-text  px-1">
-                  <div class="table-responsive" id="table-case-sidebar">
-                    <table class="table table-sm table-borderless my-0" role="presentation">
-                      <tbody>
-                        <tr>
-                          <td class="align-top idx-sidebar-accordion-text  text-neutral-500" title="Date of birth">Request date</td>
-                          <td class="align-top idx-sidebar-accordion-text text-end">28 Aug 2022</td>
-                        </tr>
-                        <tr>
-                          <td class="align-top idx-sidebar-accordion-text  text-neutral-500" title="National curriculum year">Assess decision</td>
-                          <td class="align-top idx-sidebar-accordion-text text-end">8 Oct 2022</td>
-                        </tr>
-                        <tr>
-                          <td class="align-top idx-sidebar-accordion-text  text-neutral-500" title="Case reference">Plan decision</td>
-                          <td class="align-top idx-sidebar-accordion-text text-end">17 Dec 2022</td>
-                        </tr>
-                        <tr>
-                          <td class="align-top idx-sidebar-accordion-text  text-neutral-500" title="Case status">Plan due</td>
-                          <td class="align-top idx-sidebar-accordion-text text-end">14 Jan 2023</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                <div class="accordion-body idx-sidebar-accordion-text px-2">
+                  <div class="d-flex justify-content-between">
+                    <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Date of birth">Request date</p>
+                    <p class="idx-sidebar-accordion-text mb-1">28 Aug 2022</p>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="National curriculum year">Assess decision</p>
+                    <p class="idx-sidebar-accordion-text mb-1">8 Oct 2022</p>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Case reference">Plan decision</p>
+                    <p class="idx-sidebar-accordion-text mb-1">17 Dec 2022</p>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Case status">Plan due</p>
+                    <p class="idx-sidebar-accordion-text mb-1">14 Jan 2023</p>
                   </div>
                 </div>
               </div>
