--- a/_includes/usernav.html
+++ b/_includes/usernav.html
@@ -3,8 +3,8 @@
     <nav class="collapse idx-links sticky-top d-block" aria-label="User options">
         <ul class="list-unstyled mb-0 ps-5 py-4 pt-5" id="idx-user-menu">
             <li class="pb-4"><a href="#"><i class="fal fa-user-circle idx-nav-icon me-2 fa-fw" aria-hidden="true" title="Profile"></i>Bob Schneider</a></li>
-            <li class="pb-4"><a href="/help"><i class="fal fa-question-circle idx-nav-icon me-2 fa-fw" aria-hidden="true" title="Help"></i>Help</a></li>
-            <li class="pb-4"><a class="text-neutral-500" data-bs-toggle="modal" data-bs-target="#logoutModal" type="button"><i class="fal fa-sign-out idx-nav-icon me-2 fa-fw" aria-hidden="true" title="Logout"></i>Logout</a></li>
+            <li class="pb-4"><a href="/help"><i class="fal fa-question-circle idx-nav-icon me-2 fa-fw" aria-hidden="true" title=""></i>Help</a></li>
+            <li class="pb-4"><a class="text-neutral-500" data-bs-toggle="modal" data-bs-target="#logoutModal" type="button"><i class="fal fa-sign-out idx-nav-icon me-2 fa-fw" aria-hidden="true" title=""></i>Logout</a></li>
         </ul>
     </nav>
     <!-- #EndLibraryItem -->
