--- a/_includes/actions-plan.html
+++ b/_includes/actions-plan.html
@@ -1,6 +1,12 @@
 <div class="row mb-6">
-  <div class="col-lg-6 d-flex align-items-center">
-    Draft version 1 <i class="fal fa-caret-down mx-2"></i> Shared 29 Dec 2022
+  <div class="dropdown col-lg-6 d-flex align-items-center">
+    <a class="idx-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">Draft version 1<i class="fa fa-caret-down ms-1"></i></a>
+    <span class="text-neutral-500 ms-2">shared 29 Dec 2022</span>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Draft version 1</a></li>
+      <li><a class="dropdown-item" href="#">Draft version 2</a></li>
+      <li><a class="dropdown-item" href="#">Draft version 3</a></li>
+    </ul>
   </div>
   <div class="col-lg-6 d-flex justify-content-lg-end mt-2 mt-lg-0">
     <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-pencil-alt me-2"></i>Edit plan</a>
