--- a/_includes/actions-plan.html
+++ b/_includes/actions-plan.html
@@ -1,6 +1,6 @@
 <div class="row mb-6">
   <div class="dropdown col-lg-6 d-flex align-items-center">
-    <a class="idx-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">Draft version 1<i class="fa fa-caret-down ms-1"></i></a>
+    <a class="idx-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">Draft version 1<i class="fal fa-angle-down ms-1"></i></a>
     <span class="text-neutral-500 ms-2">shared 29 Dec 2022</span>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Draft version 1</a></li>
