--- a/_includes/sidenav-case.html
+++ b/_includes/sidenav-case.html
@@ -5,12 +5,18 @@
 
           <div class="d-flex justify-content-between align-items-start my-3 px-2">
             <h1 class="mb-0 fs-2 no-border">Ellery Holden</h1>
-            <a href="#" title="Edit details">
-              <span class="fa-stack text-neutral-500">
-                <i class="fal fa-ellipsis-h fa-stack-1x"></i>
-                <i class="fal fa-circle fa-stack-1x"></i>
-              </span>
-            </a>
+            <div class="dropdown">
+              <a class="idx-link text-neutral-500" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="fa-stack fa-w">
+                  <i class="fal fa-ellipsis-h fa-stack-1x fa-w"></i>
+                  <i class="fal fa-circle fa-stack-1x fa-w"></i>
+                </span>
+              </a>
+              <ul class="dropdown-menu idx-dropdown">
+                <li><a class="dropdown-item text-neutral-600" href="#">Edit details</a></li>
+                <li><a class="dropdown-item text-neutral-600" href="#">Change picture</a></li>
+              </ul>
+            </div>
           </div>
 
           <div class="my-3 px-2">
