--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -153,10 +153,10 @@ code { color: var(--neutral) }
 table { margin-top: 1.5rem}
 /*td {vertical-align: top !important;}*/
 
-/*.fa-stack {
+.fa-stack {
     line-height: inherit !important;
     width: 1rem !important;
-}*/
+}
 
 .idx-results-table tr {
   border: 1px solid var(--neutral-100);
@@ -313,6 +313,11 @@ h3.idx-login-descriptor {
 
 .no-wrap {
   white-space: nowrap;
+}
+
+.idx-dropdown li a, .idx-dropdown li a:hover {
+  color: var(--neutral-600) !important;
+  text-decoration: none;
 }
 
 /* = Colour swatches
