--- a/_includes/sidenav-case.html
+++ b/_includes/sidenav-case.html
@@ -1,10 +1,10 @@
-<aside class="idx-sidenav d-md-block border-end bg-white" id="idx-sidenav">
+<aside class="idx-sidenav d-md-block border-end bg-white" id="idx-sidenav-case">
     <!-- #BeginLibraryItem "/Library/Contents.lbi" -->
     <nav class="collapse idx-links sticky-top d-block" aria-label="Case navigation">
-        <div class="idx-case-sidebar mb-0 pt-1 pb-5 px-1" id="idx-menu">
+        <div class="idx-case-sidebar mb-0 pt-1 pb-5 px-4 px-md-1" id="idx-menu">
 
-          <div class="d-flex justify-content-between align-items-start my-3 px-2">
-            <h1 class="mb-0 fs-2 no-border">Ellery Holden</h1>
+          <div class="d-flex justify-content-end justify-content-md-between align-items-start my-3 px-2">
+            <h1 class="d-none d-md-block mb-0 fs-2 no-border">Ellery Holden</h1>
             <div class="dropdown">
               <a class="idx-link text-neutral-500" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="fa-stack fa-w">
