--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -86,7 +86,8 @@ nav a {
 }
 
 .idx-sidenav.collapsing,
-.idx-sidenav.show {
+.idx-sidenav.show,
+.idx-border-b {
   width: 100vw;
   max-width: 100vw;
   border-bottom: 1px solid #0a1f8f1a;
