Fix onboarding pages vertical scroll

--- a/_layouts/no-banner.html
+++ b/_layouts/no-banner.html
@@ -3,7 +3,14 @@
 
 		{% include head.html %}
 
-		<body>
+		<body class="min-vh-100 d-flex flex-column">
+
+			<div class="visually-hidden-focusable overflow-hidden">
+        <div class="container-xl">
+            <a class="d-inline-flex p-2 m-1" href="#content">Skip to main content</a>
+            <a class="d-none d-md-inline-flex p-2 m-1" href="#idx-sidenav">Skip to navigation</a>
+        </div>
+    	</div>
 
 			{% include banner-alert.html %}
 
