--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -2,7 +2,7 @@
     <!-- #BeginLibraryItem "/Library/Contents.lbi" -->
     <nav class="collapse idx-links sticky-top d-block" aria-label="EHC Hub navigation">
         <ul class="list-unstyled d-flex flex-column mb-0 pt-1 pb-5 px-4" id="idx-menu">
-            <li class="pt-5 pb-1 mx-md-auto"><a id="assessments" href="/work-tray"><i class="fal fa-user idx-nav-icon fa-fw" aria-hidden="true" title="My cases in progress"></i><span class="d-md-none ms-2">My cases in progress</span></a></li>
+            <li class="pt-5 pb-1 mx-md-auto"><a id="assessments" href="/work-tray" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="My cases in progress"><i class="fal fa-user idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">My cases in progress</span></a></li>
             <li class="pt-6 pb-1 mx-md-auto"><a href="#"><i class="fal fa-file-user idx-nav-icon fa-fw" aria-hidden="true" title="My live cases"></i><span class="d-md-none ms-2">My live cases</span></a></li>
             <li class="pt-6 pb-1 mx-md-auto position-relative">
               <a href="#">
