UI foundations and text changes

--- a/_includes/assessment-progress.html
+++ b/_includes/assessment-progress.html
@@ -22,7 +22,7 @@
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
       <a class="nav-link" aria-current="page" href="#"><i class="fal fa-file-contract text-secondary-500"></i></a>
-      5. Plan
+      5. EHC Plan
     </li>
   </ul>
 </nav>
