--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         </div>
     	</div>
 
-			{% include banner-alert.html %}
+			<!-- {% include banner-alert.html %} -->
 
 			{% include header.html %}
 
