--- a/_includes/login-aside.html
+++ b/_includes/login-aside.html
@@ -1,7 +1,7 @@
 <aside class="sticky-top d-none d-md-block col-md-6 col-lg-8 g-0 idx-login-img pt-8 px-8">
 
-  <h1 class="idx-message-headline pt-8 mt-8">Education, Health and Care Hub</h1>
-  <p class="idx-message-body mt-6">A space to contribute, track and engage with the EHC needs assessment, plan and review pathways.</p>
-  <p class="idx-message-afterword">Transparency for families, professionals and education settings.</p>
+  <h1 class="idx-message-headline no-border pt-8 mt-8">SEND Education, Health and Care Hub</h1>
+  <p class="idx-message-body mt-6">Supporting children and young people with Special Educational Needs or Disability (SEND) in the Education, Health and Care (EHC) pathways. The Hub is a space to contribute, track and engage with the needs assessment, EHC Plan and review pathways.</p>
+  <!-- <p class="idx-message-afterword">Transparency for families, professionals and education settings.</p> -->
 
 </aside>
