--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -1,12 +1,12 @@
 <aside class="idx-sidenav d-md-block border-end" id="idx-sidenav">
     <!-- #BeginLibraryItem "/Library/Contents.lbi" -->
     <nav class="collapse idx-links sticky-top d-block" aria-label="EHC Hub navigation">
-        <ul class="list-unstyled d-flex flex-column mb-0 pt-1 pb-5 px-4" id="idx-menu">
+        <ul class="list-unstyled d-flex flex-column mb-0 pt-1 pb-5 px-3" id="idx-menu">
             <li class="pt-5 pb-1 mx-md-auto"><a href="/work-tray" data-bs-toggle="tooltip" data-bs-title="My cases in progress"><i class="fal fa-user idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">My cases in progress</span></a></li>
             <li class="pt-6 pb-1 mx-md-auto"><a href="#" data-bs-toggle="tooltip" data-bs-title="My live cases"><i class="fal fa-file-user idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">My live cases</span></a></li>
             <li class="pt-6 pb-1 mx-md-auto position-relative">
-              <a href="#">
-                <i class="fal fa-inbox idx-nav-icon fa-fw" aria-hidden="true" title="New requests and unassigned cases"></i>
+              <a href="#" data-bs-toggle="tooltip" data-bs-title="New requests and unassigned cases">
+                <i class="fal fa-inbox idx-nav-icon fa-fw" aria-hidden="true"></i>
                 <span class="d-md-none ms-2">New requests and unassigned cases</span>
                 <span class="position-absolute top-50 idx-badge-m translate-middle badge rounded-pill bg-danger">
                   7
@@ -14,12 +14,12 @@
                 </span>
               </a>
             </li>
-            <li class="pt-6 pb-1 mx-md-auto"><a href="#"><i class="fal fa-users idx-nav-icon fa-fw" aria-hidden="true" title="All cases"></i><span class="d-md-none ms-2">All cases</span></a></li>
-            <li class="pt-6 pb-1 mx-md-auto"><a href="#"><i class="fal fa-calendar-alt idx-nav-icon fa-fw" aria-hidden="true" title="Panel meetings"></i><span class="d-md-none ms-2">Panel meetings</span></a></li>
-            <li class="pt-6 pb-1 mx-md-auto"><a href="#"><i class="fal fa-file-plus idx-nav-icon fa-fw" aria-hidden="true" title="New request"></i><span class="d-md-none ms-2">New request</span></a></li>
-            <li class="pt-6 pb-1 mx-md-auto"><a href="#"><i class="fal fa-file-upload idx-nav-icon fa-fw" aria-hidden="true" title="Import plan"></i><span class="d-md-none ms-2">Import plan</span></a></li>
-            <li class="pt-6 pb-1 mx-md-auto"><a href="/reports"><i class="fal fa-chart-bar idx-nav-icon fa-fw" aria-hidden="true" title="Reports"></i><span class="d-md-none ms-2">Reports</span></a></li>
-            <li class="pt-6 pb-1 mx-md-auto"><a href="/admin"><i class="fal fa-cog idx-nav-icon fa-fw" aria-hidden="true" title="Admin"></i><span class="d-md-none ms-2">Admin</span></a></li>
+            <li class="pt-6 pb-1 mx-md-auto"><a href="#" data-bs-toggle="tooltip" data-bs-title="All cases"><i class="fal fa-users idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">All cases</span></a></li>
+            <li class="pt-6 pb-1 mx-md-auto"><a href="#" data-bs-toggle="tooltip" data-bs-title="Panel meetings"><i class="fal fa-calendar-alt idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">Panel meetings</span></a></li>
+            <li class="pt-6 pb-1 mx-md-auto"><a href="#" data-bs-toggle="tooltip" data-bs-title="Start a new request"><i class="fal fa-file-plus idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">New request</span></a></li>
+            <li class="pt-6 pb-1 mx-md-auto"><a href="#" data-bs-toggle="tooltip" data-bs-title="Import plan"><i class="fal fa-file-upload idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">Import plan</span></a></li>
+            <li class="pt-6 pb-1 mx-md-auto"><a href="/reports" data-bs-toggle="tooltip" data-bs-title="Reports"><i class="fal fa-chart-bar idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">Reports</span></a></li>
+            <li class="pt-6 pb-1 mx-md-auto"><a href="/admin" data-bs-toggle="tooltip" data-bs-title="Administration"><i class="fal fa-cog idx-nav-icon fa-fw" aria-hidden="true"></i><span class="d-md-none ms-2">Administration</span></a></li>
         </ul>
     </nav>
     <!-- #EndLibraryItem -->
