--- a/_includes/usernav.html
+++ b/_includes/usernav.html
@@ -1,9 +1,9 @@
 <aside class="idx-sidenav d-md-none border-end" id="idx-usernav">
     <!-- #BeginLibraryItem "/Library/Contents.lbi" -->
     <nav class="collapse idx-links sticky-top d-block" aria-label="User options">
-        <ul class="list-unstyled mb-0 ps-5 py-4 pt-5" id="idx-user-menu">
+        <ul class="list-unstyled mb-0 px-4 py-4 pt-5" id="idx-user-menu">
             <li class="pb-4"><a href="/help"><i class="fal fa-question-circle idx-nav-icon me-2 fa-fw" aria-hidden="true" title=""></i>Help</a></li>
-            <li class="pb-4"><a href="#"><i class="fal fa-user-circle idx-nav-icon me-2 fa-fw" aria-hidden="true" title="Profile"></i>My profile</a></li>            
+            <li class="pb-4"><a href="#"><i class="fal fa-user-circle idx-nav-icon me-2 fa-fw" aria-hidden="true" title="Profile"></i>My profile</a></li>
             <li class="pb-4"><a class="text-neutral-500" data-bs-toggle="modal" data-bs-target="#logoutModal" type="button"><i class="fal fa-sign-out idx-nav-icon me-2 fa-fw" aria-hidden="true" title=""></i>Logout</a></li>
         </ul>
     </nav>
