Added profile page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
           <span class="visually-hidden">User menu</span><i class="far fa-question-circle idx-nav-icon" aria-hidden="true"></i>
       </a>
       <div class="d-none d-md-block pull-right">
-        <a class="text-white me-4" href="#"><i class="fal fa-user-circle idx-nav-icon" aria-hidden="true" title="Profile"></i> Bob Schneider</a>
-        <a class="text-white me-4" href="/help"><i class="fal fa-question-circle idx-nav-icon" aria-hidden="true" title="Help"></i></a>        
+        <a class="text-white me-4" href="/user-profile"><i class="fal fa-user-circle idx-nav-icon" aria-hidden="true" title="Profile"></i> Bob Schneider</a>
+        <a class="text-white me-4" href="/help"><i class="fal fa-question-circle idx-nav-icon" aria-hidden="true" title="Help"></i></a>
         <a class="text-white me-4" data-bs-toggle="modal" data-bs-target="#logoutModal" type="button" tabindex="0"><i class="fal fa-sign-out idx-nav-icon" aria-hidden="true" title="Logout"></i></a>
       </div>
     </div>
