--- a/_includes/assessment-progress-assessment-stage.html
+++ b/_includes/assessment-progress-assessment-stage.html
@@ -11,8 +11,8 @@
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
-      <a class="nav-link" href="/case-view/assessment"><i class="fal fa-chalkboard-teacher text-success-500"></i></a>
-      3. Assessment
+      <a class="nav-link" href="/case-view/assessment"><i class="fal fa-chalkboard-teacher text-secondary-500"></i></a>
+      <strong>3. Assessment</strong>
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
@@ -21,8 +21,8 @@
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
-      <a class="nav-link" aria-current="page" href="/case-view"><i class="fal fa-file-contract text-secondary-500"></i></a>
-      <strong>5. EHC Plan</strong>
+      <a class="nav-link" aria-current="page" href="/case-view"><i class="fal fa-file-contract text-success-500"></i></a>
+      5. EHC Plan
     </li>
   </ul>
 </nav>
